tests/NormalTests/paczka1/small_fuzzy/26130994.err
Error in line 1: A942 A401 81,1
Error in line 11: WRfU S116 71,6
